k8s/monitoring-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: monitoring-grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-grafana
  template:
    metadata:
      labels:
        app: monitoring-grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
