k8s/monitoring-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-prometheus
  namespace: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-prometheus
  template:
    metadata:
      labels:
        app: monitoring-prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config

---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-prometheus
  namespace: marketplace
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: monitoring-prometheus
