k8s/transactiondb-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-transactiondb
  namespace: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-transactiondb
  template:
    metadata:
      labels:
        app: postgres-transactiondb
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-transactiondb-storage
      volumes:
      - name: postgres-transactiondb-storage
        persistentVolumeClaim:
          claimName: transactiondb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-transactiondb
  namespace: marketplace
spec:
  selector:
    app: postgres-transactiondb
  ports:
    - protocol: TCP
      port: 5432
